[package]
name = "voronoi"
version = "0.1.0"
authors = ["Brendan McGuire <brendan@bren.app>"]
edition = "2018"


[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]