[package]
name = "voronoi"
version = "0.1.0"
authors = ["Brendan McGuire <brendan@bren.app>"]
edition = "2018"
description = "Creates voronoi diagrams using Rust and WebAssembly"
license = "MIT"
repository = "https://github.com/MayorMonty/voronoi"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.51"
wasm-bindgen = "0.2.74"
rand = "0.8"
getrandom = { version = "0.2", features = ["js"] }
cached = "0.23"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]